# whisper.tflite

./: transcription_results.json
whisper_android/app/: build.gradle
whisper_android/app/src/main/: AndroidManifest.xml
whisper_android/app/src/main/cpp/: CMakeLists.txt  TFLiteEngine.cpp  aligned_alloc_compat.cpp  wav_util.h  whisper.h
whisper_android/app/src/main/java/com/whispertflite/: MainActivity.java
whisper_android/app/src/main/java/com/whispertflite/engine/: WhisperEngine.java
whisper_android/app/src/main/res/layout/: activity_main.xml
